Fix typo in letter content for Valentine Love Letter project

--- a/ValentineLoveLetter/index.html
+++ b/ValentineLoveLetter/index.html
@@ -20,7 +20,7 @@
         <button class="close-btn" onclick="closeLetter()">&times;</button>
         <div class="letter-content">
           <p class="to"><strong>To: Crush</strong></p>
-          <p>Dear crush, you are so beautiful<br>That every time I see you<br>my world stops.</p>
+          <p>Dear, you are so beautiful<br>That every time I see you<br>my world stops.</p>
           <p class="signature" style="margin-top: 20px; font-style: italic;">With love ❤️</p>
         </div>
       </div>
