--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
       <div class="bottom"></div>
       <div class="letter" id="letter">
         <div class="letter-content">
-          <p class="to"><strong>Para: Jenny</strong></p>
-          <p>Me encantaría conocerte mejor, compartir una charla tranquila o una tarde especial contigo.</p>
-          <p>¿Te gustaría salir conmigo algún día? Sería un honor para mí.</p>
+          <p class="to"><strong>Para: Ross Miau</strong></p>
+          <p>Hola, sé que no nos conocemos, pero quería decirte que me pareces una persona muy bonita. Si en algún momento te gustaría conversar o compartir una tarde tranquila, me encantaría conocerte mejor.</p>
+          <p>¿Te gustaría salir conmigo algún día? Me haría muy feliz.</p>
           <p class="signature" style="margin-top: 20px; font-style: italic;">Con cariño, Elias ❤️</p>
         </div>
       </div>
